--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
         <div class="row">
             <div class="column large-3 tab-12">
-                <img class="s-about__pic" src="images/avatars/ali.jpg" alt="">
+                <img class="s-about__pic" src="images/avatars/-bw.jpg" alt="">
             </div>
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
