--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <li><a class="smoothscroll" href="#about">About</a></li>
                     <li><a class="smoothscroll" href="#resume">Resume</a></li>
                     <li><a class="smoothscroll" href="#portfolio">Works</a></li>
-                    <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
+                    <!--<li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>-->
                     <li><a class="smoothscroll" href="#contact">Say Hello</a></li>
                 </ul>
             </nav>
@@ -125,7 +125,7 @@
 
         <div class="row">
             <div class="column large-3 tab-12">
-                <img class="s-about__pic" src="images/avatars/-bw.jpg" alt="">
+                <img class="s-about__pic" src="images/avatars/ali-bw.jpg" alt="">
             </div>
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
