Some other minute changes

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <h3>
                     </h3>
                     <h3>
-                    I'm a <span>Security Engineer</span>, skilled in <span>detection</span> and <span>monitoring</span> of <span>cyber threats</span> equipped with the passion of <span>strengthening organizational defenses</span> and <span>optimizing incident response</span>. 
+                    I'm a <span>Security Engineer</span>, skilled in <span>monitoring</span> and <span>detection</span> of <span>cyber threats</span> equipped with the passion of <span>strengthening organizational defenses</span> and <span>optimizing incident response</span>. 
                     </h3>
                     <h3>
                     Beyond my professional pursuits, I'm passionate about <span>technology</span>, fascinated by <span>human psychology</span>, and committed to making a positive impact through <span>social work</span>.
@@ -142,7 +142,7 @@
                     As a Security Engineer, I have demonstrated a solid background in enhancing organizational security. Through engaging in purple teaming activities, I've identified critical gaps in security controls, significantly boosting infrastructure visibility, and fortifying detection and response capabilities. My expertise extends to implementing advanced security controls for endpoints I specialize in fortifying computer systems through the design and implementation of robust system hardening guidelines. Additionally, I've crafted detailed incident response processes, ensuring swift and effective resolution to security incidents. During my role as a SOC Analyst, I utilized a range of security tools and actively contributed to continuous monitoring and developed innovative detection techniques, playing a vital role in incident response efforts. Additionally, I have a penchant for automating routine tasks, streamlining workflows for myself and my team.
                 </p>
                 <p>
-                    Outside of work, I'm a bit of a car freak. I love driving and learning about cars. Understanding how different cars work and what makes them unique is a passion of mine. I'm also fascinated by human psychology. Figuring out why people think and behave the way they do is something I find incredibly interesting. Additionally, physics, especially the concepts of time and space, is my favorite subject. Exploring the mysteries of the universe and how it all fits together captivates my imagination.
+                    Outside of work, I'm somewhat of a car enthusiast. I love driving and learning about cars. Understanding how different cars work and what makes them unique is a passion of mine. I'm also fascinated by human psychology. Figuring out why people think and behave the way they do is something I find incredibly interesting. Additionally, physics, especially the concepts of time and space, is my favorite subject. Exploring the mysteries of the universe and how it all fits together captivates my imagination.
                 </p>
 
                 <hr>
