--- a/index.html
+++ b/index.html
@@ -364,9 +364,9 @@
 
             <div class="column folio-item">
                 <a href="#modal-02" class="folio-item__thumb">
-                    <img src="images/portfolio/Cloudflare.png" 
-                         srcset="images/portfolio/Cloudflare.png, 
-                                 images/portfolio/Cloudflare.png" alt="">
+                    <img src="images/portfolio/Cloudflare.jpg" 
+                         srcset="images/portfolio/Cloudflare.jpg, 
+                                 images/portfolio/Cloudflare.jpg" alt="">
                 </a>
             </div> <!-- end folio-item -->
 
