--- a/index.html
+++ b/index.html
@@ -372,9 +372,9 @@
 
             <div class="column folio-item">
                 <a href="#modal-03" class="folio-item__thumb">
-                    <img src="images/portfolio/construction.png" 
-                         srcset="images/portfolio/construction.png, 
-                                 images/portfolio/construction.png" alt="">
+                    <img src="images/portfolio/construction.jpg" 
+                         srcset="images/portfolio/construction.jpg, 
+                                 images/portfolio/construction.jpg" alt="">
                 </a>
             </div> <!-- end folio-item -->
         </div> <!-- end folio-list -->
