Fixed some layout issues

--- a/index.html
+++ b/index.html
@@ -430,66 +430,66 @@
 
     </section> <!-- end s-portfolio -->
 
-    <section id="contact" class="s-contact target-section">
-
-    <div>
-        <div class="row s-contact__header">
-            <div class="column large-12">
-                <h3 class="section-header-allcaps">Contact me</h3>
-            </div>
+    <div id="contact">
+        <div>
+            <h2 style="color: white; text-align: center;">Say Hello</h2>
         </div>
-            <div>
-                <div>
-                    <div>
-                        <div>
-                            <span></span>
-                            <div class="column large-4 medium-12">
-                                <div class="row contact-infos">
-                                    <div class="column large-12 medium-7 tab-12">
+        
+        <div class="row s-contact__content">
 
-                                        <div class="contact-block">
-                                            <br>
-                                            <h5 class="contact-block__header">
-                                                Email
-                                            </h5>
-                                            <p class="contact-block__content">
-                                                <a class="mailtoui" href="mailto:aliahmeddarhere@gmail.com">aliahmeddarhere@gmail.com</a>
-                                            </p>
-                                        </div> <!-- end contact-block -->
-                                        <div class="contact-block">
-                                            <h5 class="contact-block__header">
-                                                Phone
-                                            </h5>
-                                            <p class="contact-block__content">
-                                                <a href="tel:+923041079717">+92 304 1079717</a>
-                                            </p>
-                                        </div> <!-- end contact-block -->
-                                        <div class="contact-block">
-                                            <h5 class="contact-block__header">
-                                                Linkedin
-                                            </h5>
-                                            <p class="contact-block__content">
-                                                <a href="https://www.linkedin.com/in/ali-ahmed-dar/">ali-ahmed-dar</a>
-                                            </p>
-                                        </div> <!-- end contact-block -->
-                                    </div>
-                                    <div class="column large-12 medium-5 tab-12">
-                                        <div>
-                                            <form action="#" method="post">
-                                                <input style="color: white;" class="h-full-width" type="text" name="Name" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}" required="">
-                                                <input style="color: white;" class="h-full-width" type="email" name="Email" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
-                                                <input style="color: white;" class="h-full-width" type="text" name="Mobile number" value="Mobile number" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Mobile number';}" required="">
-                                                <input style="color: white;" class="h-full-width" type="text" name="Message..." value="Message..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message...';}" required="" spellcheck="false"></input>
-                                                <input class="mailtoui btn btn--primary h-full-width"type="submit" value="Send">
-                                            </form>
-                                        </div>
-                                    </div>                
-                                </div> <!-- end contact-infos -->
+            <div class="column large-7 medium-12">
+                <h2 style="color: white;">Reach out</h2>
 
-                            </div>
+                <div class="contact-block">
+                    <br>
+                    <h5 class="contact-block__header">
+                        Email
+                    </h5>
+                    <p class="contact-block__content">
+                        <a class="mailtoui" href="mailto:aliahmeddarhere@gmail.com">aliahmeddarhere@gmail.com</a>
+                    </p>
+                </div> <!-- end contact-block -->
+                <div class="contact-block">
+                    <h5 class="contact-block__header">
+                        Phone
+                    </h5>
+                    <p class="contact-block__content">
+                        <a href="tel:+923041079717">+92 304 1079717</a>
+                    </p>
+                </div> <!-- end contact-block -->
+                <div class="contact-block">
+                    <h5 class="contact-block__header">
+                        Linkedin
+                    </h5>
+                    <p class="contact-block__content">
+                        <a href="https://www.linkedin.com/in/ali-ahmed-dar/">ali-ahmed-dar</a>
+                    </p>
+                </div> <!-- end contact-block -->
+
             </div>
+
+            <div class="column large-5 medium-12">
+                <h2 style="color: white;">Leave a message</h2>
+                <br>
+
+                <div class="row contact-infos">
+                    <div class="column large-12 medium-6 tab-12">
+                        <div class="contact-block">
+                            <form action="#" method="post">
+                                <input style="color: white;" class="h-full-width" type="text" name="Name" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}" required="">
+                                <input style="color: white;" class="h-full-width" type="email" name="Email" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
+                                <input style="color: white;" class="h-full-width" type="text" name="Mobile number" value="Mobile number" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Mobile number';}" required="">
+                                <input style="color: white;" class="h-full-width" type="text" name="Message..." value="Message..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message...';}" required="" spellcheck="false"></input>
+                                <input class="mailtoui btn btn--primary h-full-width"type="submit" value="Send">
+                            </form>
+                        </div> <!-- end contact-block -->
+                    </div>
+                </div> <!-- end contact-infos -->
+    
+                </div>
+            </div> <!-- s-contact__content -->
         </div>
-    </section>
+    </div>
 
 
     <!-- footer
