Add email functionality

--- a/index.html
+++ b/index.html
@@ -479,10 +479,10 @@
                         <div class="column large-12 medium-6 tab-12">
                             <div class="contact-block">
                                 <form action="https://formsubmit.co/aliahmeddarhere@gmail.com">
-                                    <input style="color: white;" class="h-full-width" type="text" name="Name" placeholder="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}" required="">
-                                    <input style="color: white;" class="h-full-width" type="email" name="Email" placeholder="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
-                                    <input style="color: white;" class="h-full-width" type="text" name="Mobile number" placeholder="Mobile number" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Mobile number';}" required="">
-                                    <input style="color: white;" class="h-full-width" type="text" name="Message..." placeholder="Message..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message...';}" required="" spellcheck="false"></input>
+                                    <input style="color: white;" class="h-full-width" type="text" name="Name" placeholder="Name">
+                                    <input style="color: white;" class="h-full-width" type="email" name="Email" placeholder="Email">
+                                    <input style="color: white;" class="h-full-width" type="text" name="Mobile number" placeholder="Mobile number">
+                                    <input style="color: white;" class="h-full-width" type="text" name="Message" placeholder="Message"></input>
                                     <input class="mailtoui btn btn--primary h-full-width"type="submit" value="Send">
                                 </form>
                             </div> <!-- end contact-block -->
