--- a/index.html
+++ b/index.html
@@ -483,6 +483,8 @@
                                     <input style="color: white;" class="h-full-width" type="email" name="Email" placeholder="Email">
                                     <input style="color: white;" class="h-full-width" type="text" name="Mobile number" placeholder="Mobile number">
                                     <input style="color: white;" class="h-full-width" type="text" name="Message" placeholder="Message"></input>
+                                    <input type="hidden" name="_captcha" value="false">
+                                    <input type="hidden" name="_autoresponse" value="your custom message">
                                     <input class="mailtoui btn btn--primary h-full-width"type="submit" value="Send">
                                 </form>
                             </div> <!-- end contact-block -->
