--- a/index.html
+++ b/index.html
@@ -478,11 +478,11 @@
                     <div class="row contact-infos">
                         <div class="column large-12 medium-6 tab-12">
                             <div class="contact-block">
-                                <form action="https://formsubmit.co/bda96ac900cf9e223cd3257d1e3f312d" method="post" autocomplete="on">
-                                    <input style="color: white;" class="h-full-width" type="text" name="Name" placeholder="Name">
-                                    <input style="color: white;" class="h-full-width" type="email" name="Email" placeholder="Email">
-                                    <input style="color: white;" class="h-full-width" type="text" name="Mobile number" placeholder="Mobile number">
-                                    <input style="color: white;" class="h-full-width" type="text" name="Message" placeholder="Message"></input>
+                                <form action="https://formsubmit.co/bda96ac900cf9e223cd3257d1e3f312d" method="post" autocomplete="on" >
+                                    <input style="color: white;" class="h-full-width" type="text" name="Name" placeholder="Name" />
+                                    <input style="color: white;" class="h-full-width" type="email" name="Email" placeholder="Email" />
+                                    <input style="color: white;" class="h-full-width" type="text" name="Mobile number" placeholder="Mobile number" />
+                                    <input style="color: white;" class="h-full-width" type="text" name="Message" placeholder="Message"/>
                                     <input type="hidden" name="_captcha" value="false">
                                     <input type="hidden" name="_autoresponse" value="your custom message">
                                     <input class="mailtoui btn btn--primary h-full-width"type="submit" value="Send">
