--- a/index.html
+++ b/index.html
@@ -513,8 +513,8 @@
     
     
     <!-- Java Script
-    ================================================== -->
-    <script src="js/plugins.js"></script>
+    ================================================== 
+    <script src="js/plugins.js"></script>-->
     <script src="js/main.js"></script>
 
 
