Add plugin.js backk but remove class emailtoui from send button

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                                     <input style="color: white;" class="h-full-width" type="text" name="Message" placeholder="Message"  value="Message" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message';}" required=""/>
                                     <input type="hidden" name="_captcha" value="false">
                                     <input type="hidden" name="_autoresponse" value="your custom message">
-                                    <input class="mailtoui btn btn--primary h-full-width" type="submit" value="Send">
+                                    <input class="btn btn--primary h-full-width" type="submit" value="Send">
                                 </form>
                             </div> <!-- end contact-block -->
                         </div>
@@ -513,8 +513,8 @@
     
     
     <!-- Java Script
-    ================================================== 
-    <script src="js/plugins.js"></script>-->
+    ================================================== -->
+    <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 
 
