--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                                     <input type="hidden" name="_captcha" value="false">
                                     <input type="hidden" name="_autoresponse" value="Thanks for your message, I will try to get back to you soon.">
                                     <input type="hidden" name="_next" value="https://ali-ahmed-dar.github.io/">
-                                    <input class="btn btn--primary h-full-width" type="submit" value="Send" onclick="alert('Thanks for your message, I will try to get back to you soon.')">
+                                    <input class="btn btn--primary h-full-width" type="submit" value="Send" onclick=change()/>
                                 </form>
                             </div> <!-- end contact-block -->
                         </div>
@@ -515,6 +515,12 @@
     
     <!-- Java Script
     ================================================== -->
+    <script>
+        function change()
+        {
+            document.getElementById("myButton1").value="Close Curtain";
+        }
+    </script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 
