--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <script>
         function change()
         {
-            document.getElementById("myButton1").value="Close Curtain";
+            document.getElementById("send-email").value="Thanks for your message, I will get back to you soon";
         }
     </script>
     <script src="js/plugins.js"></script>
@@ -489,7 +489,7 @@
                                     <input type="hidden" name="_captcha" value="false">
                                     <input type="hidden" name="_autoresponse" value="Thanks for your message, I will try to get back to you soon.">
                                     <input type="hidden" name="_next" value="https://ali-ahmed-dar.github.io/">
-                                    <input class="btn btn--primary h-full-width" type="submit" value="Send" onclick=change()/>
+                                    <input class="btn btn--primary h-full-width" id="send-email" type="submit" value="Send" onclick=change()/>
                                 </form>
                             </div> <!-- end contact-block -->
                         </div>
