--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
     <script>
         function change()
         {
-            document.getElementById("send-email").value="Thanks for your message, I will get back to you soon";
+            document.getElementById("send-email").innerHTML="Thanks for your message, I will get back to you soon";
         }
     </script>
     <script src="js/plugins.js"></script>
