--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                                     <input style="color: white;" class="h-full-width" type="text" name="Message" placeholder="Message"/>
                                     <input type="hidden" name="_captcha" value="false">
                                     <input type="hidden" name="_autoresponse" value="Thanks for your message, I will try to get back to you soon.">
-                                    <input class="btn btn--primary h-full-width" onclick="this.value='Thanks for your message'" type="button" value="Send"/>
+                                    <input class="btn btn--primary h-full-width" onclick="alert('Thanks for your message, I will get back to you soon')" type="button" value="Send"/>
                                     <input type="hidden" name="_next" value="https://ali-ahmed-dar.github.io/">
                                 </form>
                             </div> <!-- end contact-block -->
