--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
     <div>
         <br>
         <br>
-        <h2 style="color: white; text-align: center;">Say Hello</h2>
+        <h2 style="color: white; text-align: center;" class="">Say Hello</h2>
         <br>
 
         <div id="contact">            
@@ -484,6 +484,8 @@
                         </div>
                     </div> <!-- end contact-infos -->
                 </div>
+                <br>
+                <br>
             </div> <!-- s-contact__content -->
         </div>
     </div>
