--- a/index.html
+++ b/index.html
@@ -426,8 +426,8 @@
     <div>
         <br>
         <br>
-        <h2 style="color: white; text-align: center;" class="">Say Hello</h2>
-        <br>
+        <section id="contact" class="s-contact target-section">
+            <br>
 
         <div id="contact">            
             <div class="row s-contact__content">
@@ -488,6 +488,7 @@
                 <br>
             </div> <!-- s-contact__content -->
         </div>
+        </section>
     </div>
     <!-- footer
     ================================================== -->
