--- a/index.html
+++ b/index.html
@@ -423,73 +423,70 @@
 
     </section> <!-- end s-portfolio -->
 
-    <div>
-        <br>
-        <br>
-        <section id="contact" class="s-contact target-section">
+
+    <section id="contact" class="s-contact target-section">
+        <h1 style="color: white; text-align: center;">Say Hello</h1>
+
+    <div id="contact">            
+        <div class="row s-contact__content">
+
+            <div class="column large-7 medium-12">
+                <h2 style="color: white; text-align: center;">Reach out</h2>
+                <br>
+                <div class="contact-block">
+                    <br>
+                    <h5 class="contact-block__header">
+                        Email
+                    </h5>
+                    <p class="contact-block__content">
+                        <a class="mailtoui" href="mailto:aliahmeddarhere@gmail.com">aliahmeddarhere@gmail.com</a>
+                    </p>
+                </div> <!-- end contact-block -->
+                <div class="contact-block">
+                    <h5 class="contact-block__header">
+                        Phone
+                    </h5>
+                    <p class="contact-block__content">
+                        <a href="tel:+923041079717">+92 304 1079717</a>
+                    </p>
+                </div> <!-- end contact-block -->
+                <div class="contact-block">
+                    <h5 class="contact-block__header">
+                        Linkedin
+                    </h5>
+                    <p class="contact-block__content">
+                        <a href="https://www.linkedin.com/in/ali-ahmed-dar/">ali-ahmed-dar</a>
+                    </p>
+                </div> <!-- end contact-block -->
+
+            </div>
+
+            <div class="column large-5 medium-12">
+                <h2 style="color: white; text-align: center;">Leave a message</h2>
+                <br>
+                <br>
+                <div class="row contact-infos">
+                    <div class="column large-12 medium-6 tab-12">
+                        <div class="contact-block">
+                            <form action="https://formsubmit.co/bda96ac900cf9e223cd3257d1e3f312d" method="post" autocomplete="on" >
+                                <input style="color: white;" class="h-full-width" type="text" name="Name" placeholder="Name"/>
+                                <input style="color: white;" class="h-full-width" type="email" name="Email" placeholder="Email"/>
+                                <input style="color: white;" class="h-full-width" type="text" name="Mobile number" placeholder="Mobile number"/>
+                                <input style="color: white;" class="h-full-width" type="text" name="Message" placeholder="Message"/>
+                                <input type="hidden" name="_captcha" value="false">
+                                <input type="hidden" name="_autoresponse" value="Thanks for your message, I will try to get back to you soon.">
+                                <input type="hidden" name="_next" value="https://ali-ahmed-dar.github.io/">
+                                <input class="btn btn--primary h-full-width" type="submit" value="Send" onclick="alert('Thanks for your message, I will try to get back to you soon.')">
+                            </form>
+                        </div> <!-- end contact-block -->
+                    </div>
+                </div> <!-- end contact-infos -->
+            </div>
             <br>
-
-        <div id="contact">            
-            <div class="row s-contact__content">
-
-                <div class="column large-7 medium-12">
-                    <h2 style="color: white; text-align: center;">Reach out</h2>
-                    <br>
-                    <div class="contact-block">
-                        <br>
-                        <h5 class="contact-block__header">
-                            Email
-                        </h5>
-                        <p class="contact-block__content">
-                            <a class="mailtoui" href="mailto:aliahmeddarhere@gmail.com">aliahmeddarhere@gmail.com</a>
-                        </p>
-                    </div> <!-- end contact-block -->
-                    <div class="contact-block">
-                        <h5 class="contact-block__header">
-                            Phone
-                        </h5>
-                        <p class="contact-block__content">
-                            <a href="tel:+923041079717">+92 304 1079717</a>
-                        </p>
-                    </div> <!-- end contact-block -->
-                    <div class="contact-block">
-                        <h5 class="contact-block__header">
-                            Linkedin
-                        </h5>
-                        <p class="contact-block__content">
-                            <a href="https://www.linkedin.com/in/ali-ahmed-dar/">ali-ahmed-dar</a>
-                        </p>
-                    </div> <!-- end contact-block -->
-
-                </div>
-
-                <div class="column large-5 medium-12">
-                    <h2 style="color: white; text-align: center;">Leave a message</h2>
-                    <br>
-                    <br>
-                    <div class="row contact-infos">
-                        <div class="column large-12 medium-6 tab-12">
-                            <div class="contact-block">
-                                <form action="https://formsubmit.co/bda96ac900cf9e223cd3257d1e3f312d" method="post" autocomplete="on" >
-                                    <input style="color: white;" class="h-full-width" type="text" name="Name" placeholder="Name"/>
-                                    <input style="color: white;" class="h-full-width" type="email" name="Email" placeholder="Email"/>
-                                    <input style="color: white;" class="h-full-width" type="text" name="Mobile number" placeholder="Mobile number"/>
-                                    <input style="color: white;" class="h-full-width" type="text" name="Message" placeholder="Message"/>
-                                    <input type="hidden" name="_captcha" value="false">
-                                    <input type="hidden" name="_autoresponse" value="Thanks for your message, I will try to get back to you soon.">
-                                    <input type="hidden" name="_next" value="https://ali-ahmed-dar.github.io/">
-                                    <input class="btn btn--primary h-full-width" type="submit" value="Send" onclick="alert('Thanks for your message, I will try to get back to you soon.')">
-                                </form>
-                            </div> <!-- end contact-block -->
-                        </div>
-                    </div> <!-- end contact-infos -->
-                </div>
-                <br>
-                <br>
-            </div> <!-- s-contact__content -->
-        </div>
-        </section>
+            <br>
+        </div> <!-- s-contact__content -->
     </div>
+    </section>
     <!-- footer
     ================================================== -->
     <!--
