--- a/index.html
+++ b/index.html
@@ -431,13 +431,11 @@
         <div class="row s-contact__content">
 
             <div class="column large-7 medium-12">
-                <h2 style="color: white; text-align: center;">Reach out</h2>
-                <br>
+                <h2 style="color: white; text-align: center; padding-top: 0.5rem; padding-bottom: 0.5rem;">Reach out</h2>
                 <div class="contact-block">
-                    <br>
-                    <h5 class="contact-block__header">
+                    <h4 class="contact-block__header">
                         Email
-                    </h5>
+                    </h4>
                     <p class="contact-block__content">
                         <a class="mailtoui" href="mailto:aliahmeddarhere@gmail.com">aliahmeddarhere@gmail.com</a>
                     </p>
@@ -462,9 +460,7 @@
             </div>
 
             <div class="column large-5 medium-12">
-                <h2 style="color: white; text-align: center;">Leave a message</h2>
-                <br>
-                <br>
+                <h2 style="color: white; text-align: center; padding-top: 0.5rem; padding-bottom: 0.5rem;">Leave a message</h2>
                 <div class="row contact-infos">
                     <div class="column large-12 medium-6 tab-12">
                         <div class="contact-block">
