--- a/index.html
+++ b/index.html
@@ -455,6 +455,14 @@
                     <p class="contact-block__content">
                         <a href="https://www.linkedin.com/in/ali-ahmed-dar/">ali-ahmed-dar</a>
                     </p>
+                </div> <!-- end contact-block -->                
+                <div class="contact-block">
+                    <h5 class="contact-block__header">
+                        Github
+                    </h5>
+                    <p class="contact-block__content">
+                        <a href="https://github.com/ali-ahmed-dar">ali-ahmed-dar</a>
+                    </p>
                 </div> <!-- end contact-block -->
 
             </div>
