--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
                     <hr />
                     <div style="margin: auto; text-align: center;">
-                        <a href="CV-AliAhmedDar.html" target="_blank" style="color: black; padding: 2rem; background-color: whitesmoke; max-width: 40%; min-width: fit-content;">
+                        <!--<a href="CV-AliAhmedDar.html" target="_blank" style="color: black; padding: 2rem; background-color: whitesmoke; max-width: 40%; min-width: fit-content;">
                             <svg style="vertical-align:-15%;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
                                 <circle cx="12" cy="12" r="3"></circle>
@@ -154,6 +154,7 @@
                         </a>
                         &nbsp;
                         &nbsp;
+                    -->
                         <a href="CV-AliAhmedDar.pdf" target="_blank" style="color: black; padding: 2rem; background-color: whitesmoke; max-width: 40%; min-width: fit-content;">
                             <svg style="vertical-align:-15%;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);">
                                 <path d="M12 16L16 11 13 11 13 4 11 4 11 11 8 11z"></path>
