--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                         <ul class="skill-bars-fat">
                             <li>
                                 <div class="progress percent90"></div>
-                                <strong>Security Monitoring, Detections & Incident Management</strong>
+                                <strong>Detection, Monitoring & Incident Management</strong>
                             </li>
                             <li>
                                 <div class="progress percent80"></div>
