--- a/index.html
+++ b/index.html
@@ -298,27 +298,27 @@
 
                         <ul class="skill-bars-fat">
                             <li>
-                                <div class="progress percent90"></div>
+                                <div style="height: 2rem;" class="progress percent90"></div>
                                 <strong>Detection, Monitoring & Incident Management</strong>
                             </li>
                             <li>
-                                <div class="progress percent80"></div>
+                                <div style="height: 2rem;" class="progress percent80"></div>
                                 <strong>Cloud Security</strong>
                             </li>
                             <li>
-                                <div class="progress percent65"></div>
+                                <div style="height: 2rem;" class="progress percent65"></div>
                                 <strong>Security Posture Management</strong>
                             </li>
                             <li>
-                                <div class="progress percent85"></div>
+                                <div style="height: 2rem;" class="progress percent85"></div>
                                 <strong>Identity & Access Management</strong>
                             </li>
                             <li>
-                                <div class="progress percent90"></div>
+                                <div style="height: 2rem;" class="progress percent90"></div>
                                 <strong>Network Security</strong>
                             </li>
                             <li>
-                                <div class="progress percent90"></div>
+                                <div style="height: 2rem;" class="progress percent90"></div>
                                 <strong>Programming, Scripting & Automation</strong>
                             </li>
                         </ul>
